# Felix

./: .gitignore  CMakeLists.txt  Felix.sln  README.md
Felix/: CMakeLists.txt  Felix.cpp  Felix.vcxproj  Felix.vcxproj.filters  include.h
Felix/bmp/: BMPWriter.cc  BMPWriter.h  gif.h
Felix/math/: math.cpp  math.h
Felix/object/: object.cpp  object.h
Felix/old math/: math.cpp  math.h
